@@ -619,6 +619,31 @@ checkcert_ssmtp() {
     esac
 }
 
+# checkcert_smtp_starttls <hostname> [<days>]
+#   Check if the SSL certificate of an SMTP server is close to expiration.
+#
+#   <days> defaults to $CHECKCERT_WARN_BEFORE, and if that's not specified, 21.
+#
+#   Example: checkcert_smtp_starttls mail.example.com
+#
+#   This function is normally used from /etc/pov/check-ssl-certs.
+checkcert_smtp_starttls() {
+    info_check checkcert_smtp_starttls "$@"
+    local server="$1"
+    local days="${2:-${CHECKCERT_WARN_BEFORE:-21}}"
+    local output
+    output="$(/usr/lib/nagios/plugins/check_smtp -D "$days" -H "$server" -p 25 --starttls 2>&1)"
+    case "$output" in
+        OK\ *)
+            info "$output"
+            ;;
+        *)
+            warn_check checkcert_smtp_starttls "$@"
+            warn "$output"
+            ;;
+    esac
+}
+
 # checkcert_imaps <hostname> [<days>]
 #   Check if the SSL certificate of an IMAPS server is close to expiration.
 #
